# sani

./: .eslintignore  .eslintrc.js  .gitignore  .npmrc  Cargo.toml  Containerfile  LICENSE  Procfile  README.md  bot.ts  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.djs.json  tsconfig.djs2.json  tsconfig.droff.json  tsconfig.json
.github/workflows/: ci.yml  push.yml
sani/: .eslintignore  .eslintrc.js  Containerfile  package.json  tsconfig.json
sani/.github/workflows/: ci.yml
sani/emojis/: galacon-year-emoji.ai
sani/src/d.js/: lang.ts  loyaltyserver.ts  rando.ts  randorolestuff.ts  reactionrole.ts
sani/src/droff/: env.ts  index.ts
sani/src/droff/modules/: greetings.ts
src/: bot.rs  bot.ts  commandish.ts  dotenv.rs  env.rs  ids.ts  index.ts  killswitch.ts  lang.ts  lib.rs  loyalty_server.rs  loyaltyserver.ts  main.rs  rando.ts  randorolestuff.ts  reaction_role.rs  reactionrole.ts
src/commandishies/: commandish.ts  help.ts  otherroleassign.ts  pinggg.ts  randorolestuff.ts  yearassign.ts
src/commands/: command.ts  ids.ts  test.ts  yearassign.ts  yeet.ts
src/commandsish/: otherroleassign.ts  pinggg.ts  randorolestuff.ts  yearassign.ts
src/d.js/: bot.ts  commandish.ts  ids.ts  index.ts  killswitch.ts  lang.ts  loyaltyserver.ts  rando.ts  randorolestuff.ts  reactionrole.ts
src/d.js-2/lib/: env.ts  logger.ts
src/djs/: commandish.ts  killswitch.ts  rando.ts  randorolestuff.ts  reactionrole.ts
src/djs2/: index.ts
src/djs2/lib/: README  index.ts
src/djs2/lib/bot/: index.ts  slash-command.ts
src/droff/: app.ts  env.ts  index.ts
src/droff/modules/: greetings.ts
src/lib/: logger.rs
src/modules/: mod.rs  module.rs  reaction_role.rs  status.rs
