[package]
name = "sani"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
twilight-cache-inmemory = "0.6"
twilight-gateway = "0.6"
twilight-http = "0.6"
twilight-mention = "0.6"
twilight-model = "0.6"
twilight-standby = "0.6"
twilight-util = "0.6"

[profile.dev]
opt-level = 0 # none
debug = true
debug-assertions = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
