# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sani"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies.twilight-bot-utils]
git = "https://github.com/autumnblazey/twilight-bot-utils.git"
rev = "687e0b68cf6c616a9dc98ec1de75427097f99ec2"

[dependencies.warp]
version = "0.3"

[profile.dev]
opt-level = 0 # none
debug = true
debug-assertions = true

[profile.release]
opt-level = 3 # all
debug-assertions = false
